force-app/main/default/objects/Case/fields/Audit_Trail__c.field-meta.xml
<CustomField>
    <fullName>Audit_Trail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Audit Trail</label>
    <referenceTo>Audit_Trail__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>