force-app/main/default/objects/Case/fields/Change_Log__c.field-meta.xml
<CustomField>
    <fullName>Change_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Change Log</label>
    <referenceTo>Change_Log__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>