force-app/main/default/objects/Case/listViews/Audit_Trail_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Audit_Trail_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Audit Trail Queue</label>
    <queue>Audit_Trail_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>